staging/juice-shop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: juice-shop
  name: juice-deployment
  namespace: juice-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juice-shop
  strategy: {}
  template:
    metadata:
      labels:
        app: juice-shop
    spec:
      containers:
      - image: iurimihai/juice-shop:9999
        imagePullPolicy: Always
        name: nginx
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: juice-shop
  name: juice-shop
  namespace: juice-shop
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: juice-shop
